[gd_scene load_steps=4 format=3 uid="uid://d3ig42f0i1rka"]

[ext_resource type="Script" uid="uid://dx7r1tvpj85rf" path="res://assets/entities/parts/!base/part.gd" id="1_kbnnl"]
[ext_resource type="Texture2D" uid="uid://cu47odnxftkwe" path="res://assets/entities/parts/!base/part_connection.png" id="2_u55kc"]
[ext_resource type="PackedScene" uid="uid://bab6j5n3amm12" path="res://assets/entities/parts/!base/part_join.tscn" id="3_q6eb6"]

[node name="PartBase" type="CollisionShape2D"]
script = ExtResource("1_kbnnl")

[node name="PartGrab" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="PartJoin" parent="." instance=ExtResource("3_q6eb6")]

[node name="PartConnection" type="Sprite2D" parent="."]
scale = Vector2(1, 1e-05)
texture = ExtResource("2_u55kc")
offset = Vector2(0, -8)

[connection signal="area_shape_entered" from="PartGrab" to="." method="_on_partjoin_area_shape_entered"]
[connection signal="area_shape_exited" from="PartGrab" to="." method="_on_partjoin_area_shape_exited"]
